--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
     </head>
     <body>
         <main>
-            <h1>Hello World!</h1>
+            <h1>Gerador de Senha</h1>
+
+            <div class="generator-container">
+                <span>Tamanho <span id="value"></span>caracteres</span>
+
+                <input type="range" min="5" max="25" class="slider" />
+
+                <button>Gerar senha</button>
+            </div>
+
+            <div class="password-container hide">
+                <span>Senha gerada:</span>
+
+                <span class="password"></span>
+            </div>
         </main>
     </body>
 </html>
