feat: applied style

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <div class="generator-container">
                 <span>Tamanho <span id="value"></span>caracteres</span>
 
-                <input type="range" min="5" max="25" class="slider" />
+                <input id="slider" type="range" min="5" max="25" />
 
                 <button>Gerar senha</button>
             </div>
 
-            <div class="password-container hide">
+            <div class="passwor-containerd hide">
                 <span>Senha gerada:</span>
 
-                <span class="password"></span>
+                <span id="password"></span>
             </div>
         </main>
     </body>
