feat: function to generate created password

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <h1>Gerador de Senha</h1>
 
             <div class="generator-container">
-                <span>Tamanho <span id="value"></span>caracteres</span>
+                <span>Senha de <span id="value"></span> caracteres</span>
 
                 <input id="slider" type="range" min="5" max="25" />
 
-                <button>Gerar senha</button>
+                <button id="generator-button">Gerar senha</button>
             </div>
 
-            <div class="passwor-containerd hide">
+            <div class="password-container hide">
                 <span>Senha gerada:</span>
 
                 <span id="password"></span>
