feat: copy password button added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
                 <span id="password"></span>
             </div>
+
+            <button class="copy-button">Copiar senha</button>
         </main>
     </body>
 </html>
